# abacus-develop

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  Dell_abaInstall.sh  Dockerfile  Dockerfile.cuda  Dockerfile.gnu  Dockerfile.intel  Doxyfile  README  README.md  abaInstall_HZWpara.sh  abacus_cmake.sh  clang-format.txt  entrypoint.sh  gcc2.sh  install_dsp.sh  issue2422.txt  job.err  log  replace_nks.sh  testcplx.cpp  use.sh
gint_k_test/tests/: CMakeLists.txt  gint_k_test.cpp
python/pyabacus/: CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
python/pyabacus/examples/: diago_matrix.py
python/pyabacus/src/: py_abacus.cpp  py_diago_dav_subspace.cpp  py_diago_dav_subspace.hpp  py_diago_david.hpp  py_hsolver.cpp  py_m_nao.cpp  py_math_base.cpp  py_radial_collection.cpp
python/pyabacus/tests/: test_base_math.py  test_cell.py  test_diago_dav_subspace.py  test_hsolver.py  test_m_nao.py
source/module_base/test_parallel/: CMakeLists.txt  parallel_common_test.sh  parallel_global_test.cpp  parallel_global_test.sh  parallel_reduce_test.cpp  parallel_reduce_test.sh  parallel_reduce_test.sh~merged
source/module_basis/module_representation/: CMakeLists.txt  repin.cpp  repin.h  repin_lcao.h  repin_nao.cpp  repin_nao.h  repin_pao.cpp  repin_pao.h  repin_pw.h  repout.cpp  repout.h  repout_pw.cpp  repout_pw.h  repout_qo.h  repout_wannier.h  representation.cpp  representation.h
source/module_cell/: .nfs0000000004bab8d600000001  CMakeLists.txt  atom_pseudo.cpp  atom_pseudo.h  atom_spec.cpp  atom_spec.h  cal_atoms_info.h  check_atomic_stru.cpp  check_atomic_stru.h  check_structure.cpp  check_structure.h  klist.cpp  klist.h  parallel_kpoints.cpp  parallel_kpoints.h  pseudo.cpp  pseudo.h  read_atoms.cpp  read_cell_pseudopots.cpp  read_pp.cpp  read_pp.h  read_pp_blps.cpp  read_pp_complete.cpp  read_pp_upf100.cpp  read_pp_upf201.cpp  read_pp_vwr.cpp  setup_nonlocal.cpp  unitcell.cpp  unitcell.h  unitcell_pseudo.cpp  unitcell_pseudo.h
source/module_cell/module_neighbor/: sltk_adjacent_set.cpp  sltk_adjacent_set.h  sltk_atom.cpp  sltk_atom.h  sltk_atom_arrange.cpp  sltk_atom_input.cpp  sltk_atom_input.h  sltk_grid.cpp  sltk_grid.h  sltk_grid_driver.cpp  sltk_grid_driver.h
source/module_cell/module_paw/: CMakeLists.txt  paw_atom.cpp  paw_cell.cpp  paw_cell.h  paw_cell_libpaw.cpp  paw_element.cpp  paw_element.h  paw_interface.cpp  paw_sphbes.cpp
source/module_cell/module_symmetry/: symm_other.cpp  symmetry.cpp  symmetry.h  symmetry_basic.cpp  symmetry_basic.h
source/module_cell/test/: CMakeLists.txt  atom_pseudo_test.cpp  atom_spec_test.cpp  bcast_atom_spec_test.sh  klist_test.cpp  klist_test_para.cpp  parallel_kpoints_test.cpp  parallel_kpoints_test.sh  prepare_unitcell.h  pseudo_nc_test.cpp  read_pp_test.cpp  read_pp_upf_test.cpp  setup_nonlocal_test.cpp  unitcell_test.cpp  unitcell_test_f.cpp  unitcell_test_p.cpp  unitcell_test_para.cpp  unitcell_test_r.cpp  unitcell_test_readpp.cpp  unitcell_test_setupcell.cpp
source/module_cell/test_pw/: CMakeLists.txt  unitcell_test_pw.cpp
source/module_hamilt/test/: CMakeLists.txt  kinetic_test.cpp  kinetic_test.h
source/module_hamilt_lcao/module_gint/: CMakeLists.txt  GlobalV.txt  cal_ddpsir_ylm.cpp  cal_dpsir_ylm.cpp  cal_dpsirr_ylm.cpp  cal_nnrg.cpp  cal_psir_ylm.cpp  gint.cpp  gint.h  gint_force.h  gint_force_cpu_interface.cpp  gint_force_gpu.cu  gint_force_gpu.h  gint_fvl.cpp  gint_gamma.cpp  gint_gamma.h  gint_gamma_env.cpp  gint_gamma_vl.cpp  gint_gpu_interface.cpp  gint_k.h  gint_k_env.cpp  gint_k_pvdpr.cpp  gint_k_pvpr.cpp  gint_k_sparse.cpp  gint_k_sparse1.cpp  gint_rho.cpp  gint_rho.h  gint_rho_cpu_interface.cpp  gint_rho_gpu.cu  gint_rho_gpu.h  gint_tau.cpp  gint_tools.cpp  gint_tools.h  gint_vl.cpp  gint_vl.cu  gint_vl.h  gint_vl_cpu_interface.cpp  gint_vl_gpu.cu  gint_vl_gpu.h  grid_bigcell.cpp  (+19 more)
source/module_hamilt_lcao/module_sc/: CMakeLists.txt  basic_funcs.cpp  cal_h_lambda.cpp  cal_mw.cpp  cal_mw_from_lambda.cpp  cal_weight_func.cpp  init_sc.cpp  lambda_loop.cpp  sc_parse_json.cpp  spin_constrain.cpp  spin_constrain.h
source/module_io/test/: CMakeLists.txt  INPUT  bessel_basis_test.cpp  cal_dos_test.cpp  cif_io_test.cpp  file_reader_test.cpp  for_testing_input_conv.h  for_testing_klist.h  input_conv_test.cpp  input_test.cpp  input_test_para.cpp  numerical_basis_test.cpp  orb_io_test.cpp  output_hcontainer_test.cpp  outputlog_test.cpp  para_json_test.cpp  parameter_pool_test.cpp  parse_args_test.cpp  prepare_unitcell.h  print_info_test.cpp  read_exit_file_test.cpp  read_input_ptest.cpp  read_rhog_test.cpp  read_stop_file_test.cpp  read_wfc_lcao_test.cpp  read_wfc_pw_test.cpp  read_wfc_to_rho_test.cpp  single_R_io_test.cpp  sparse_matrix_test.cpp  to_qo_test.cpp  write_dos_pw_test.cpp  write_input_test.cpp  write_istate_info_test.cpp  write_orb_info_test.cpp  write_wfc_lcao_para.sh  write_wfc_lcao_test.cpp  write_wfc_nao_test.cpp
source/module_io/test_serial/: CMakeLists.txt  dm_io_test.cpp  io_dmk_test.cpp  io_system_test.cpp  nscf_band_test.cpp  (+8 more)
source/src_ri/: CMakeLists.txt  abfs.cpp  conv_coulomb_pot-inl.h  conv_coulomb_pot.cpp  conv_coulomb_pot_k-template.h  exx_abfs-construct_orbs.cpp  exx_abfs-dm.cpp  exx_abfs-dm.h  exx_abfs-inverse_matrix_double.cpp  exx_abfs-matrix_lcaoslcaos_lcaoslcaos.cpp  exx_abfs-matrix_orbs11.cpp  exx_abfs-matrix_orbs21.cpp  exx_abfs-matrix_orbs22.cpp  exx_abfs-parallel-communicate-allreduce-template.h  exx_abfs-parallel-communicate-dm-allreduce.cpp  exx_abfs-parallel-communicate-dm.cpp  exx_abfs-parallel-communicate-dm3-allreduce.cpp  exx_abfs-parallel-communicate-dm3-template.h  exx_abfs-parallel-communicate-dm3.cpp  exx_abfs-parallel-communicate-dm3.h  exx_abfs-parallel-communicate-hexx-allreduce2.cpp  exx_abfs-parallel-communicate-hexx-template.h  exx_abfs-parallel-communicate-hexx.cpp  exx_abfs-parallel-distribute-kmeans.cpp  exx_abfs-pca.cpp  exx_abfs-screen-cauchy.cpp  exx_abfs-screen-schwarz.cpp  exx_abfs.cpp  exx_abfs.h  exx_lcao.cpp  exx_lcao.h  exx_lip.cpp  exx_opt_orb.cpp  exx_opt_orb.h
(+2897 files in other folders)
